--- a/puzzle2.html
+++ b/puzzle2.html
@@ -1,27 +1,81 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
   <title>Puzzle 2</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Puzzle 2</h1>
-  <p>What has keys but can’t open locks?</p>
+  <div class="container">
+    <h1>Puzzle 2</h1>
 
-  <input id="answer" type="text" placeholder="Your answer">
-  <button onclick="checkAnswer()">Submit</button>
-  <p id="feedback"></p>
+    <p class="clue">
+Now this one's a fun fact
+About one in the group
+Who had they been the third
+Would have had a different contact
+They would have flown like a bird
+Not like sun, sky or stars
+Yes, with this name, they would have gone far
+    </p>
+
+    <div class="input-row">
+      <input id="answer" type="text" placeholder="Your answer">
+      <button id="submitBtn">Submit</button>
+    </div>
+
+    <div id="feedback" class="feedback small"></div>
+
+    <div class="reveal">
+      <strong>Progress:</strong>
+      <div id="progressText" style="margin-top:8px;font-family:monospace;"></div>
+    </div>
+
+    <button class="reset small reset" id="resetBtn">Reset progress (for testing)</button>
+  </div>
 
   <script>
-    function checkAnswer() {
-      const input = document.getElementById("answer").value.toLowerCase().trim();
-      if (input === "piano") {
-        window.location.href = "puzzle3.html";
-      } else {
-        document.getElementById("feedback").textContent = "❌ Try again.";
-      }
+    const correctHash = "9e78b43ea00edcac8299e0cc8df7f6f913078171335f733a21d5d911b6999132";
+    const chunk = ":07"; // chunk for puzzle 2
+    const nextPage = "puzzle3.html";
+
+    async function sha256Hex(message) {
+      const msgUint8 = new TextEncoder().encode(message);
+      const hashBuffer = await crypto.subtle.digest("SHA-256", msgUint8);
+      const hashArray = Array.from(new Uint8Array(hashBuffer));
+      return hashArray.map(b => b.toString(16).padStart(2, "0")).join("");
     }
+
+    function showProgress() {
+      const revealed = JSON.parse(localStorage.getItem("revealChunks") || "[]");
+      const display = revealed.join("") || "[ nothing revealed yet ]";
+      document.getElementById("progressText").textContent = display;
+    }
+
+    document.getElementById("submitBtn").addEventListener("click", async () => {
+      const raw = document.getElementById("answer").value;
+      const normalized = raw.trim().toLowerCase();
+      const h = await sha256Hex(normalized);
+      const fb = document.getElementById("feedback");
+      if (h === correctHash) {
+        fb.textContent = "✅ Correct! Unlocking next piece...";
+        const arr = JSON.parse(localStorage.getItem("revealChunks") || "[]");
+        if (arr.length < 2) { arr.push(chunk); localStorage.setItem("revealChunks", JSON.stringify(arr)); }
+        setTimeout(() => window.location.href = nextPage, 700);
+      } else {
+        fb.textContent = "❌ Try again.";
+      }
+      showProgress();
+    });
+
+    document.getElementById("resetBtn").addEventListener("click", () => {
+      localStorage.removeItem("revealChunks");
+      showProgress();
+      document.getElementById("feedback").textContent = "Progress reset.";
+    });
+
+    showProgress();
   </script>
 </body>
 </html>
