--- a/complete.html
+++ b/complete.html
@@ -1,12 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Congratulations!</title>
+  <meta charset="utf-8" />
+  <title>Complete — Invitation</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎉 You did it! 🎉</h1>
-  <p>You’ve solved all the puzzles. Well done!</p>
+  <div class="container">
+    <h1>Final Reveal</h1>
+
+    <div class="reveal" id="revealBox" style="font-size:1.1rem;"></div>
+
+    <p id="note" class="small" style="margin-top:12px;"></p>
+
+    <button id="resetBtn" class="reset small">Reset progress</button>
+  </div>
+
+  <script>
+    function getProgress() {
+      return JSON.parse(localStorage.getItem("revealChunks") || "[]");
+    }
+
+    function show() {
+      const arr = getProgress();
+      const box = document.getElementById("revealBox");
+      const note = document.getElementById("note");
+      if (arr.length < 7) {
+        box.textContent = arr.join("") || "[ nothing revealed yet ]";
+        note.textContent = "Solve all puzzles to reveal the full meetup details.";
+      } else {
+        // Final message — only shown if all 7 chunks are present
+        const full = arr.join(""); // should equal "8:07 PM, September 5, 2025"
+        box.textContent = "🎉 " + full + " 🎉";
+        note.textContent = "That's the exact meetup time & date — share it with your friends!";
+      }
+    }
+
+    document.getElementById("resetBtn").addEventListener("click", () => {
+      localStorage.removeItem("revealChunks");
+      show();
+    });
+
+    show();
+  </script>
 </body>
 </html>
