--- a/puzzle1.html
+++ b/puzzle1.html
@@ -39,7 +39,7 @@ And the looooong Wednesdays
   <script>
     // Puzzle 1 expects normalized answer "8:07"
     const correctHash = "b657338f3ce4ab774c6964d0ef976adb7655ab8fc3d4c41c7fc7f3f532d62a95";
-    const chunk = "8";         // chunk assigned for puzzle 1
+    const chunk = ", 2025";         // chunk assigned for puzzle 1
     const nextPage = "puzzle2.html";
 
     async function sha256Hex(message) {
