--- a/puzzle2.html
+++ b/puzzle2.html
@@ -37,7 +37,7 @@ Yes, with this name, they would have gone far
 
   <script>
     const correctHash = "9e78b43ea00edcac8299e0cc8df7f6f913078171335f733a21d5d911b6999132";
-    const chunk = " September"; // chunk for puzzle 2
+    const chunk = " 5"; // chunk for puzzle 2
     const nextPage = "puzzle3.html";
 
     async function sha256Hex(message) {
