--- a/puzzle3.html
+++ b/puzzle3.html
@@ -37,7 +37,7 @@ We, almost died for that A
 
   <script>
     const correctHash = "d6d824abba4afde81129c71dea75b8100e96338da5f416d2f69088f1960cb091";
-    const chunk = " PM"; // chunk for puzzle 3
+    const chunk = " September"; // chunk for puzzle 3
     const nextPage = "puzzle4.html";
 
     async function sha256Hex(message) {
