--- a/puzzle5.html
+++ b/puzzle5.html
@@ -39,7 +39,7 @@ What's the fifth line?
 
   <script>
     const correctHash = "537694f6e2d3b5714207f65114caa9782059d89cd99f43bd379fa228fb608665";
-    const chunk = "September"; // chunk for puzzle 5 (month)
+    const chunk = " PM"; // chunk for puzzle 5 (month)
     const nextPage = "puzzle6.html";
 
     async function sha256Hex(message) {
