--- a/puzzle7.html
+++ b/puzzle7.html
@@ -52,7 +52,7 @@ For those all around town
 
   <script>
     const correctHash = "cc767fb1c6efc232caf9dd1f6e853d853b58ddd2c058c8820320e69d755c18fb";
-    const chunk = ", 2025"; // final chunk (year)
+    const chunk = "Dos Pueblos High School Home Bleachers at "; // final chunk (year)
     const nextPage = "complete.html";
 
     async function sha256Hex(message) {
