--- a/puzzle1.html
+++ b/puzzle1.html
@@ -63,8 +63,10 @@ And the looooong Wednesdays
       if (h === correctHash) {
         fb.textContent = "✅ Correct! Unlocking next piece...";
         const arr = JSON.parse(localStorage.getItem("revealChunks") || "[]");
-        // only add if not already revealed at this index
-        if (arr.length < 1) { arr.push(chunk); localStorage.setItem("revealChunks", JSON.stringify(arr)); }
+        if (!arr.includes(chunk)) { // prevent duplicates
+          arr.unshift(chunk); 
+          localStorage.setItem("revealChunks", JSON.stringify(arr));
+        }
         setTimeout(() => window.location.href = nextPage, 700);
       } else {
         fb.textContent = "❌ Try again.";
