--- a/puzzle2.html
+++ b/puzzle2.html
@@ -61,7 +61,10 @@ Yes, with this name, they would have gone far
       if (h === correctHash) {
         fb.textContent = "✅ Correct! Unlocking next piece...";
         const arr = JSON.parse(localStorage.getItem("revealChunks") || "[]");
-        if (arr.length < 2) { arr.push(chunk); localStorage.setItem("revealChunks", JSON.stringify(arr)); }
+        if (!arr.includes(chunk)) { // prevent duplicates
+          arr.unshift(chunk); 
+          localStorage.setItem("revealChunks", JSON.stringify(arr));
+        }
         setTimeout(() => window.location.href = nextPage, 700);
       } else {
         fb.textContent = "❌ Try again.";
