--- a/puzzle5.html
+++ b/puzzle5.html
@@ -63,7 +63,10 @@ What's the fifth line?
       if (h === correctHash) {
         fb.textContent = "✅ Correct! Unlocking next piece...";
         const arr = JSON.parse(localStorage.getItem("revealChunks") || "[]");
-        if (arr.length < 5) { arr.push(chunk); localStorage.setItem("revealChunks", JSON.stringify(arr)); }
+        if (!arr.includes(chunk)) { // prevent duplicates
+          arr.unshift(chunk); 
+          localStorage.setItem("revealChunks", JSON.stringify(arr));
+        }
         setTimeout(() => window.location.href = nextPage, 700);
       } else {
         fb.textContent = "❌ Try again.";
