--- a/puzzle6.html
+++ b/puzzle6.html
@@ -64,7 +64,10 @@ System.out.println(numbers[0011]);
       if (h === correctHash) {
         fb.textContent = "✅ Correct! Unlocking next piece...";
         const arr = JSON.parse(localStorage.getItem("revealChunks") || "[]");
-        if (arr.length < 6) { arr.push(chunk); localStorage.setItem("revealChunks", JSON.stringify(arr)); }
+        if (!arr.includes(chunk)) { // prevent duplicates
+          arr.unshift(chunk); 
+          localStorage.setItem("revealChunks", JSON.stringify(arr));
+        }
         setTimeout(() => window.location.href = nextPage, 700);
       } else {
         fb.textContent = "❌ Try again.";
