added hint to puzzle4

--- a/puzzle4.html
+++ b/puzzle4.html
@@ -21,7 +21,7 @@ Alas
 What was her name?
 That you murdered that night
 With little
- to no shame
+to no shame
     </p>
 
     <div class="input-row">
@@ -30,6 +30,17 @@ With little
     </div>
 
     <div id="feedback" class="feedback small"></div>
+    <!-- HINT UI (paste under the feedback div) -->
+    <div style="margin-top:10px;">
+      <button id="hintBtn" class="small">Show Hint</button>
+    </div>
+
+    <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
+      <div id="hint-content">
+        <!-- Put your hint text here. Edit this text manually. -->
+        If you think you have it just the wrong spelling, please text/call me.
+    </div>
+  </div>
 
     <div class="reveal">
       <strong>Progress:</strong>
