--- a/puzzle3.html
+++ b/puzzle3.html
@@ -27,6 +27,18 @@ We, almost died for that A
 
     <div id="feedback" class="feedback small"></div>
 
+    <!-- HINT UI (paste under the feedback div) -->
+    <div style="margin-top:10px;">
+      <button id="hintBtn" class="small">Show Hint</button>
+    </div>
+
+    <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
+      <div id="hint-content">
+        <!-- Put your hint text here. Edit this text manually. -->
+        If you think you have it just the wrong spelling, please text/call me.
+      </div>
+    </div>
+    
     <div class="reveal">
       <strong>Progress:</strong>
       <div id="progressText" style="margin-top:8px;font-family:monospace;"></div>
