Update puzzle7.html hint

--- a/puzzle7.html
+++ b/puzzle7.html
@@ -19,7 +19,7 @@ I fear
 It's a sad little story
 Of a sad little thing
 That happened quite long ago
- (I need a min)
+(I need a min)
 Can you tell me the name?
 I really need to know
 Of the dog that I lost
@@ -50,7 +50,7 @@ For those all around town
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text here. Edit this text manually. -->
-        If you think you have it just the wrong spelling, please text/call me.
+        Line 18 and 17 refer to Salt.
       </div>
     </div>
 
