--- a/puzzle6.html
+++ b/puzzle6.html
@@ -38,7 +38,7 @@ System.out.println(numbers[0011]);
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text here. Edit this text manually. -->
-        If you think you have it just the wrong spelling, please text/call me.
+        Every number listed is in binary. You are looking for what is printed or if an error is thrown.
       </div>
     </div>
 
