--- a/puzzle5.html
+++ b/puzzle5.html
@@ -37,7 +37,7 @@ What's the fifth line?
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text here. Edit this text manually. -->
-        If you think you have it just the wrong spelling, please text/call me.
+        I am referring to the 2022 BCR of this song on YT Music.
       </div>
     </div>
 
