Update puzzle3.html hint

--- a/puzzle3.html
+++ b/puzzle3.html
@@ -35,7 +35,7 @@ We, almost died for that A
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text here. Edit this text manually. -->
-        If you think you have it just the wrong spelling, please text/call me.
+        I did text it to you.
       </div>
     </div>
     
