changed answer for this puzzle

--- a/puzzle2.html
+++ b/puzzle2.html
@@ -35,7 +35,7 @@ Yes, with this name, they would have gone far
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text here. Edit this text manually. -->
-        If you think you have it just the wrong spelling, please text/call me.
+        Sky, Sol, and _ _ _ a
       </div>
     </div>
     
@@ -48,7 +48,7 @@ Yes, with this name, they would have gone far
   </div>
 
   <script>
-    const correctHash = "9e78b43ea00edcac8299e0cc8df7f6f913078171335f733a21d5d911b6999132";
+    const correctHash = "970ec274ca867815174ebe4eff19282000f9495a6c7254e94991d1fb4dc3df30";
     const chunk = " 5"; // chunk for puzzle 2
     const nextPage = "puzzle3.html";
 
