Update puzzle1.html hint

--- a/puzzle1.html
+++ b/puzzle1.html
@@ -36,7 +36,7 @@ And the looooong Wednesdays
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text here. Edit this text manually. -->
-        If you think you have it just the wrong spelling, please text/call me.
+        Not 3:30. Format H:MM.
       </div>
     </div>
 
