--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Rules</h1>
-  <p>Try not to use the internet unless you are stuck. Don't look up this website on GitHub(Stellan!) cause it will ruin it.</p>
+  <h1>Rules:   </h1>
+  <p>Try not to use the internet unless you are stuck.
+    Don't look up this website on GitHub(Stellan!), cause the answers are hash encoded. 
+    Meaning you also can't inspect the page and find them.</p>
 
   <div style="margin-top:18px;">
       <a href="puzzle1.html"><button>Start Puzzle 1</button></a>
