--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Rules:   </h1>
-  <div>
-    <p>Try not to use the internet unless you are stuck.
+  <div class="container">
+    <h1>Rules:   </h1>
+  </div>
+  <div class="clue">
+    <p>
+      Try not to use the internet unless you are stuck.
       Don't look up this website on GitHub(Stellan!), cause the answers are hash encoded. 
       Meaning you also can't inspect the page and find them.</p>
     </div>
