--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Puzzle 1</title>
+  <title>Start</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Rules:   </h1>
+    <h1>Rules</h1>
   </div>
   <div class="clue">
     <p>
