--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <p>
       Try not to use the internet unless you are stuck.
       Don't look up this website on GitHub(Stellan!), cause the answers are hash encoded. 
-      Meaning you also can't inspect the page and find them.</p>
-    </div>
+      Meaning you also can't inspect the page and find them.
+    </p>
+  </div>
 
   <div style="margin-top:18px;">
       <a href="puzzle1.html"><button>Start Puzzle 1</button></a>
