--- a/puzzle44.html
+++ b/puzzle44.html
@@ -53,7 +53,7 @@ to no shame
   <script>
     const correctHash = "f6e1c43062056d44e216de6174c7222959d676587aa451ceaaf671fc694de018";
     const chunk = ", "; // chunk for puzzle 4 (delimiter between time and month)
-    const nextPage = "puzzle5.html";
+    const nextPage = "puzzlefive.html";
 
     async function sha256Hex(message) {
       const msgUint8 = new TextEncoder().encode(message);
