changed how puzzle reveals

--- a/puzzle110.html
+++ b/puzzle110.html
@@ -52,7 +52,7 @@ System.out.println(numbers[0011]);
 
   <script>
     const correctHash = "d2f6cd1b7464e3af281c291425ceea14e470b17f68acb6306e563ecc40eed690";
-    const chunk = " 8:07"; // chunk for puzzle 6 (day)
+    const chunk = "e bleachers at 8:"; // chunk for puzzle 6 (day)
     const nextPage = "puzzleseven7.html";
 
     async function sha256Hex(message) {
