--- a/puzzle2.html
+++ b/puzzle2.html
@@ -49,7 +49,7 @@ Yes, with this name, they would have gone far
 
   <script>
     const correctHash = "970ec274ca867815174ebe4eff19282000f9495a6c7254e94991d1fb4dc3df30";
-    const chunk = " 5"; // chunk for puzzle 2
+    const chunk = " 5th"; // chunk for puzzle 2
     const nextPage = "puzzle3.html";
 
     async function sha256Hex(message) {
