--- a/puzzleseven7.html
+++ b/puzzleseven7.html
@@ -64,7 +64,7 @@ For those all around town
 
   <script>
     const correctHash = "cc767fb1c6efc232caf9dd1f6e853d853b58ddd2c058c8820320e69d755c18fb";
-    const chunk = "Dos Pueblos High School Home Bleachers at "; // final chunk (year)
+    const chunk = "Dos Pueblos High School Hom"; // final chunk (location)
     const nextPage = "complete.html";
 
     async function sha256Hex(message) {
