--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Rules</h1>
     <p class="clue">
       Try not to use the internet unless you are stuck.
-      Don't look up this website on GitHub(Stellan!), cause the answers are hash encoded. 
+      Don't look up this website (Stellan!), cause thats no fun ;(. If you are stuck get a hint from me.
       Meaning you also can't inspect the page and find them.
     </p>
     <a href="puzzle001.html"><button>Start Puzzle 1</button></a>
