--- a/puzzle001.html
+++ b/puzzle001.html
@@ -36,7 +36,7 @@ And the looooong Wednesdays
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text here. Edit this text manually. -->
-        Not 3:35. Format H:MM.
+        Not 3:35. Format H:MM
       </div>
     </div>
 
