Final changes(hopefully)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <div class="container">
     <h1>Rules</h1>
     <p class="clue">
-      Try not to use the internet unless you are stuck.
-      Don't look up this website (Stellan!), cause thats no fun ;(. If you are stuck get a hint from me.
-      Meaning you also can't inspect the page and find them.
+      Try not to use the internet unless you are stuck and I'm not available.
+      Don't look up this website, cause thats no fun ;(. 
+      Don't inspect the page either! That would ruin it.
     </p>
     <a href="puzzle001.html"><button>Start Puzzle 1</button></a>
   </div>
