--- a/puzzle001.html
+++ b/puzzle001.html
@@ -49,9 +49,8 @@ And the looooong Wednesdays
   </div>
 
   <script>
-    // Puzzle 1 expects normalized answer "8:07"
     const correctHash = "b657338f3ce4ab774c6964d0ef976adb7655ab8fc3d4c41c7fc7f3f532d62a95";
-    const chunk = ", 2025";         // chunk assigned for puzzle 1
+    const chunk = ", 2025";
     const nextPage = "puzzle2.html";
 
     async function sha256Hex(message) {
