--- a/puzzleseven7.html
+++ b/puzzleseven7.html
@@ -12,8 +12,8 @@
 
     <p class="clue">
 And now the finale
-You’ve made it quite far
-But the answer that’s here
+You've made it quite far
+But the answer that's here
 Is one you might not know 
 I fear
 It's a sad little story
@@ -64,7 +64,7 @@ For those all around town
 
   <script>
     const correctHash = "cc767fb1c6efc232caf9dd1f6e853d853b58ddd2c058c8820320e69d755c18fb";
-    const chunk = "Dos Pueblos High School Hom"; // final chunk (location)
+    const chunk = "DPHS hom";
     const nextPage = "complete.html";
 
     async function sha256Hex(message) {
