--- a/puzzlefive.html
+++ b/puzzlefive.html
@@ -51,7 +51,7 @@ What's the fifth line?
 
   <script>
     const correctHash = "537694f6e2d3b5714207f65114caa9782059d89cd99f43bd379fa228fb608665";
-    const chunk = " 07 PM"; // chunk for puzzle 5 (month)
+    const chunk = " 07 PM";
     const nextPage = "puzzle110.html";
 
     async function sha256Hex(message) {
