Changed around some puzzles

--- a/complete.html
+++ b/complete.html
@@ -32,7 +32,7 @@
       } else {
         const full = arr.join("").trim(); // join and trim any accidental edges
         box.textContent = "🎉 " + full + " 🎉";
-        note.textContent = "That's the exact meetup time & date — share it with your friends!";
+        note.textContent = "See you there ;)";
       }
 
     }
