--- a/puzzle110.html
+++ b/puzzle110.html
@@ -22,7 +22,7 @@ int[] numbers = new int[i];
 numbers[0011] = 0101;
 System.out.println(numbers[0011]);
     </p>
-    
+
     <div class="input-row">
       <input id="answer" type="text" placeholder="Your answer">
       <button id="submitBtn">Submit</button>
@@ -52,7 +52,7 @@ System.out.println(numbers[0011]);
 
   <script>
     const correctHash = "d2f6cd1b7464e3af281c291425ceea14e470b17f68acb6306e563ecc40eed690";
-    const chunk = "e bleachers at 8:";
+    const chunk = "and at 8:";
     const nextPage = "puzzleseven7.html";
 
     async function sha256Hex(message) {
