--- a/puzzle2.html
+++ b/puzzle2.html
@@ -11,13 +11,15 @@
     <h1>Puzzle 2</h1>
 
     <p class="clue">
-Now this one's a fun fact
-About one in the group
-Who had they been the third
-Would have had a different contact
-They would have flown like a bird
-Not like sun, sky or stars
-Yes, with this name, they would have gone far
+And now to the one
+Who likes to run
+His horrible word use is very
+Not fun
+But what we like to say
+When he asks something dumb
+Is ___
+And he won't press
+So fun!
     </p>
 
     <div class="input-row">
@@ -32,7 +34,7 @@ Yes, with this name, they would have gone far
 
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
-        Sky, Sol, and _ _ _ a
+        It ain't no.
       </div>
     </div>
     
@@ -45,7 +47,7 @@ Yes, with this name, they would have gone far
   </div>
 
   <script>
-    const correctHash = "970ec274ca867815174ebe4eff19282000f9495a6c7254e94991d1fb4dc3df30";
+    const correctHash = "3a6eb0790f39ac87c94f3856b2dd2c5d110e6811602261a9a923d3bb23adc8b7";
     const chunk = " 5th"; 
     const nextPage = "puzzle3.html";
 
