--- a/puzzleseven7.html
+++ b/puzzleseven7.html
@@ -14,25 +14,13 @@
 And now the finale
 You've made it quite far
 But the answer that's here
-Is one you might not know 
-I fear
-It's a sad little story
-Of a sad little thing
-That happened quite long ago
-(I need a min)
-Can you tell me the name?
-I really need to know
-Of the dog that I lost
-And you just might be ready to go
-She was kind
-She was sweet
-And a kinda bit white
-If you ate the verisimilar
-It might give you a fright
-I'll say it again
-She was golden brown
-Also used to bake cookies
-For those all around town
+Is a higher bar
+The answer is 1 0 000 000 01  11 01 101 01 1011 0100 01  01 100 111 010 01  000 1 0 0100 0100 01 10  000 01 10 1 00  000 101 1011
+Whew!
+That's a lot
+But I'll give you a hint
+The answer is spelt
+Of some stones. and some sticks-
     </p>
 
     <div class="input-row">
@@ -50,7 +38,11 @@ For those all around town
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text here. Edit this text manually. -->
-        Line 18 and 17 refer to Salt.
+        The redhead knows it by heart--
+        Now you really-should-know-
+        If he were-here.
+        He'd. be. helpful.
+        You know.
       </div>
     </div>
 
@@ -63,8 +55,8 @@ For those all around town
   </div>
 
   <script>
-    const correctHash = "cc767fb1c6efc232caf9dd1f6e853d853b58ddd2c058c8820320e69d755c18fb";
-    const chunk = "DPHS hom";
+    const correctHash = "735cb9c8d98ea021b0e7b520d3e540fea99eae7860f64b6603709e6e142b76af";
+    const chunk = "Marching b";
     const nextPage = "complete.html";
 
     async function sha256Hex(message) {
