--- a/puzzle2.html
+++ b/puzzle2.html
@@ -47,6 +47,7 @@ So fun!
   </div>
 
   <script>
+    //this isn't working idk why
     const correctHash = "3a6eb0790f39ac87c94f3856b2dd2c5d110e6811602261a9a923d3bb23adc8b7";
     const chunk = " 5th"; 
     const nextPage = "puzzle3.html";
