--- a/puzzle1.html
+++ b/puzzle1.html
@@ -2,24 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Puzzle 2</title>
+  <title>Puzzle 1</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Puzzle 2</h1>
+    <h1>Puzzle 1</h1>
 
     <p class="clue">
-And now to the one
-Who likes to run
-His horrible word use is very
-Not fun
-But what we like to say
-When he asks something dumb 
-Is ___
-And he won't press
-So fun!
+What time is it?
+
+Some man in the group knows
+Not the engineer
+Nor HeWhoMustNotBeNamed
+But the one who did that thing
+With the reeds
+And the looooong Wednesdays
     </p>
 
     <div class="input-row">
@@ -35,8 +34,8 @@ So fun!
     </div>
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
-        <!-- Put your hint text for puzzle 2 here -->
-        It ain't no.
+        <!-- Put your hint text for puzzle 1 here -->
+        Not 3:35. Format H:MM
       </div>
     </div>
 
@@ -49,17 +48,21 @@ So fun!
   </div>
 
   <script>
-    const expectedNormalized = "yes".trim().toLowerCase().replace(/\s+/g, "");
-    const chunk = " 5"; // day
-    const nextPage = "puzzle3.html";
+    // Config for this page
+    const expectedNormalized = "8:07".trim().toLowerCase().replace(/\s+/g, "");
+    const chunk = ", 2025"; // year (revealed first)
+    const nextPage = "puzzle2.html";
 
-    const attemptsKey = "attempts_puzzle2";
+    // Hint & attempts
+    const attemptsKey = "attempts_puzzle1";
     const HINT_THRESHOLD = 3;
     function getAttempts(){ return parseInt(sessionStorage.getItem(attemptsKey) || "0", 10); }
     function setAttempts(n){ sessionStorage.setItem(attemptsKey, String(n)); }
     function incrementAttempts(){ const n = getAttempts()+1; setAttempts(n); if(n>=HINT_THRESHOLD) showHint(); }
+
     function showHint(){ const btn=document.getElementById("hintBtn"), box=document.getElementById("hintBox"); if(!box||!btn) return; box.style.display="block"; btn.textContent="Hide Hint"; }
     function hideHint(){ const btn=document.getElementById("hintBtn"), box=document.getElementById("hintBox"); if(!box||!btn) return; box.style.display="none"; btn.textContent="Show Hint"; }
+
     document.getElementById("hintBtn").addEventListener("click", () => {
       const box = document.getElementById("hintBox");
       if (box.style.display === "none" || !box.style.display) showHint();
@@ -67,12 +70,14 @@ So fun!
     });
     if (getAttempts() >= HINT_THRESHOLD) showHint();
 
-    function normalize(s){ return s.trim().toLowerCase().replace(/\s+/g, ""); }
+    // Progress helpers
     function showProgress(){
       const revealed = JSON.parse(localStorage.getItem("revealChunks") || "[]");
       const display = revealed.join("") || "[ nothing revealed yet ]";
       document.getElementById("progressText").textContent = display;
     }
+
+    function normalize(s){ return s.trim().toLowerCase().replace(/\s+/g, ""); }
 
     document.getElementById("submitBtn").addEventListener("click", () => {
       const raw = document.getElementById("answer").value || "";
@@ -97,6 +102,7 @@ So fun!
       document.getElementById("feedback").textContent = "Progress reset.";
     });
 
+    // show progress on load
     showProgress();
   </script>
 </body>
