--- a/puzzle6.html
+++ b/puzzle6.html
@@ -2,24 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Puzzle 2</title>
+  <title>Puzzle 6</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Puzzle 2</h1>
+    <h1>Puzzle 6</h1>
 
     <p class="clue">
-And now to the one
-Who likes to run
-His horrible word use is very
-Not fun
-But what we like to say
-When he asks something dumb 
-Is ___
-And he won't press
-So fun!
+Ahhhh now looky here,
+You’ll need a smart one I fear
+For only he knows
+What happens if (oh dear!)
+int a = 0010;
+int b = 0011;
+int i = a * b - (a+b);
+int[] numbers = new int[i];
+numbers[0011] = 0101;
+System.out.println(numbers[0011]);
     </p>
 
     <div class="input-row">
@@ -35,8 +36,8 @@ So fun!
     </div>
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
-        <!-- Put your hint text for puzzle 2 here -->
-        It ain't no.
+        <!-- Put your hint text for puzzle 6 here -->
+        The numbers are in binary. You are entering what prints, or the name of the exception.
       </div>
     </div>
 
@@ -49,11 +50,11 @@ So fun!
   </div>
 
   <script>
-    const expectedNormalized = "yes".trim().toLowerCase().replace(/\s+/g, "");
-    const chunk = " 5"; // day
-    const nextPage = "puzzle3.html";
+    const expectedNormalized = "arrayindexoutofboundsexception".trim().toLowerCase().replace(/\s+/g, "");
+    const chunk = "and at 8:"; 
+    const nextPage = "puzzle7.html";
 
-    const attemptsKey = "attempts_puzzle2";
+    const attemptsKey = "attempts_puzzle6";
     const HINT_THRESHOLD = 3;
     function getAttempts(){ return parseInt(sessionStorage.getItem(attemptsKey) || "0", 10); }
     function setAttempts(n){ sessionStorage.setItem(attemptsKey, String(n)); }
