--- a/puzzle7.html
+++ b/puzzle7.html
@@ -2,24 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Puzzle 2</title>
+  <title>Puzzle 7 — Finale</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Puzzle 2</h1>
+    <h1>Puzzle 7 — Finale</h1>
 
     <p class="clue">
-And now to the one
-Who likes to run
-His horrible word use is very
-Not fun
-But what we like to say
-When he asks something dumb 
-Is ___
-And he won't press
-So fun!
+And now the finale
+You’ve made it quite far
+But the answer that’s here
+Is a higher bar
+The answer is 1 0 000 000 01 11 01 101 01 1011 0100 01 000 1 0 0100 0100 01 10 01 100 111 010 01 000 01 10 1 00 000 101 1011
+
+Whew!
+That's a lot
+But I’ll give you some hints
+The answer is spelt
+Of some stones. and some sticks-
+The redhead knows it-- 
+Now you really-should-know-.
+If he were-here.
+He'd. be. helpful.
+You know.
     </p>
 
     <div class="input-row">
@@ -35,8 +42,11 @@ So fun!
     </div>
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
-        <!-- Put your hint text for puzzle 2 here -->
-        It ain't no.
+        <!-- Put your hint text for puzzle 7 here -->
+        The redhead knows it by heart--
+        Now you really-should-know-
+        If he were-here.
+        He'd. be. helpful.
       </div>
     </div>
 
@@ -49,11 +59,11 @@ So fun!
   </div>
 
   <script>
-    const expectedNormalized = "yes".trim().toLowerCase().replace(/\s+/g, "");
-    const chunk = " 5"; // day
-    const nextPage = "puzzle3.html";
+    const expectedNormalized = "tessamakaylaadorastellansantisky".trim().toLowerCase().replace(/\s+/g, "");
+    const chunk = "Marching b"; // hour (leftmost)
+    const nextPage = "complete.html";
 
-    const attemptsKey = "attempts_puzzle2";
+    const attemptsKey = "attempts_puzzle7";
     const HINT_THRESHOLD = 3;
     function getAttempts(){ return parseInt(sessionStorage.getItem(attemptsKey) || "0", 10); }
     function setAttempts(n){ sessionStorage.setItem(attemptsKey, String(n)); }
@@ -79,7 +89,7 @@ So fun!
       const norm = normalize(raw);
       const fb = document.getElementById("feedback");
       if (norm === expectedNormalized) {
-        fb.textContent = "✅ Correct! Unlocking next piece...";
+        fb.textContent = "✅ Correct! Unlocking final piece...";
         const arr = JSON.parse(localStorage.getItem("revealChunks") || "[]");
         if (!arr.includes(chunk)) { arr.unshift(chunk); localStorage.setItem("revealChunks", JSON.stringify(arr)); }
         setTimeout(()=> window.location.href = nextPage, 700);
