added hint for 7

--- a/puzzle7.html
+++ b/puzzle7.html
@@ -12,14 +12,14 @@
 
     <p class="clue">
 And now the finale
-You’ve made it quite far
-But the answer that’s here
+You've made it quite far
+But the answer that's here
 Is a higher bar
 The answer is 1 0 000 000 01 11 01 101 01 1011 0100 01 000 1 0 0100 0100 01 10 01 100 111 010 01 000 01 10 1 00 000 101 1011
 
 Whew!
 That's a lot
-But I’ll give you some hints
+But I'll give you some hints
 The answer is spelt
 Of some stones. and some sticks-
 The redhead knows it-- 
@@ -43,10 +43,7 @@ You know.
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text for puzzle 7 here -->
-        The redhead knows it by heart--
-        Now you really-should-know-
-        If he were-here.
-        He'd. be. helpful.
+        Think about the . and - in the last 5 lines.
       </div>
     </div>
 
