--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       Try not to use the internet unless you are stuck and I'm not available.
       Don't look up this website, cause thats no fun ;(. 
       Don't inspect the page either! That would ruin it.
+      Each poem is tailored to a person
+      You find which person the riddle is for, they are the most likely to know the answer.
     </p>
     <a href="puzzle1.html"><button>Start Puzzle 1</button></a>
   </div>
