added additional hints becuause my friends suck at riddles

--- a/puzzle1.html
+++ b/puzzle1.html
@@ -35,7 +35,7 @@ And the looooong Wednesdays
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text for puzzle 1 here -->
-        Not 3:35. Format H:MM
+        Not 3:35. Format H:MM. The last digit is the the chord after vi. 
       </div>
     </div>
 
