--- a/puzzle1.html
+++ b/puzzle1.html
@@ -35,7 +35,16 @@ And the looooong Wednesdays
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text for puzzle 1 here -->
-        Not 3:35. Format H:MM. The last digit is the the chord after vi. If you haven't guessed already, this one is for you, Santi. What time did the band use to say it was?
+Not 3:35. Format H:MM.
+It's a <strong>saying</strong> two bands have
+One band at a place in my past
+The other in one of our futures
+No, its not future me
+And it's not a he
+But I'll say she
+Is definitely a ray
+(for this one use the internet)(bolded text might help you in your search ;)
+
       </div>
     </div>
 
