added ANOTHER hint

--- a/puzzle1.html
+++ b/puzzle1.html
@@ -42,9 +42,9 @@ The other in one of our futures
 No, its not future me
 And it's not a he
 But I'll say she
-Is definitely a ray
+And like how some say I am Loyal
+Is definitely a Ray
 (for this one use the internet)(bolded text might help you in your search ;)
-
       </div>
     </div>
 
