even bigger hint

--- a/puzzle1.html
+++ b/puzzle1.html
@@ -38,7 +38,7 @@ And the looooong Wednesdays
 Not 3:35. Format H:MM.
 It's a <strong>saying</strong> two bands have
 One band at a place in my past
-The other in one of our futures
+The other at the place of one of our futures
 No, its not future me
 And it's not a he
 But I'll say she
