hint change pz1

--- a/puzzle1.html
+++ b/puzzle1.html
@@ -41,9 +41,8 @@ One band at a place in my past
 The other at the place of one of our futures
 No, its not future me
 And it's not a he
-But I'll say she
 And like how some say I am Loyal
-Is definitely a Ray
+She is definitely a Ray
 (for this one use the internet)(bolded text might help you in your search ;)
       </div>
     </div>
