changed hint for pz1

--- a/puzzle1.html
+++ b/puzzle1.html
@@ -35,7 +35,7 @@ She is definitely a Ray
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text for puzzle 1 here -->
-        The band always wins. H:MM. 
+        The band always wins. H:MM or ###.
       </div>
     </div>
 
