--- a/puzzle1.html
+++ b/puzzle1.html
@@ -49,7 +49,7 @@ She is definitely a Ray
 
   <script>
     // Config for this page
-    const expectedNormalized = "8:07".trim().toLowerCase().replace(/\s+/g, "") || "807".trim().toLowerCase().replace(/\s+/g, "");
+    const expectedNormalized = "8:07".trim().toLowerCase().replace(/\s+/g, "") || "807".trim().toLowerCase();
     const chunk = ", 2025"; // year (revealed first)
     const nextPage = "puzzle2.html";
 
