--- a/puzzle1.html
+++ b/puzzle1.html
@@ -90,7 +90,7 @@ She is definitely a Ray
         if (!arr.includes(chunk)) { arr.unshift(chunk); localStorage.setItem("revealChunks", JSON.stringify(arr)); }
         setTimeout(()=> window.location.href = nextPage, 700);
       } else {
-        fb.textContent = "❌ Try again.";
+        fb.textContent = "❌ Try again. Attempts: " + getAttempts();
         incrementAttempts();
       }
       showProgress();
