all puzzles should have an attempt counter now

--- a/puzzle2.html
+++ b/puzzle2.html
@@ -84,7 +84,7 @@ So fun!
         if (!arr.includes(chunk)) { arr.unshift(chunk); localStorage.setItem("revealChunks", JSON.stringify(arr)); }
         setTimeout(()=> window.location.href = nextPage, 700);
       } else {
-        fb.textContent = "❌ Try again.";
+        fb.textContent = "❌ ❌ Try again. Attempts: " + getAttempts();
         incrementAttempts();
       }
       showProgress();
