--- a/puzzle3.html
+++ b/puzzle3.html
@@ -82,7 +82,7 @@ We, almost died for that A
         if (!arr.includes(chunk)) { arr.unshift(chunk); localStorage.setItem("revealChunks", JSON.stringify(arr)); }
         setTimeout(()=> window.location.href = nextPage, 700);
       } else {
-        fb.textContent = "❌ Try again.";
+        fb.textContent = "❌ Try again. Attempts: " + getAttempts();
         incrementAttempts();
       }
       showProgress();
