--- a/puzzle4.html
+++ b/puzzle4.html
@@ -86,7 +86,7 @@ With little
         if (!arr.includes(chunk)) { arr.unshift(chunk); localStorage.setItem("revealChunks", JSON.stringify(arr)); }
         setTimeout(()=> window.location.href = nextPage, 700);
       } else {
-        fb.textContent = "❌ Try again.";
+        fb.textContent = "❌ Try again. Attempts: " + getAttempts();
         incrementAttempts();
       }
       showProgress();
