changed how chunks appear

--- a/puzzle4.html
+++ b/puzzle4.html
@@ -52,7 +52,7 @@ With little
 
   <script>
     const expectedNormalized = "geraldine".trim().toLowerCase().replace(/\s+/g, "");
-    const chunk = "PM, "; // delimiter between time and month
+    const chunk = "PM, Septe"; 
     const nextPage = "puzzle5.html";
 
     const attemptsKey = "attempts_puzzle4";
