--- a/puzzle4.html
+++ b/puzzle4.html
@@ -20,8 +20,7 @@ Now tell me
 Alas
 What was her name?
 That you murdered that night
-With little
- to no shame
+With little to no shame
     </p>
 
     <div class="input-row">
