--- a/puzzle6.html
+++ b/puzzle6.html
@@ -12,15 +12,19 @@
 
     <p class="clue">
 Ahhhh now looky here,
-You’ll need a smart one I fear
+You'll need a smart one I fear
 For only he knows
 What happens if (oh dear!)
-int a = 0010;
-int b = 0011;
-int i = a * b - (a+b);
-int[] numbers = new int[i];
-numbers[0011] = 0101;
-System.out.println(numbers[0011]);
+class Main {
+    public static void main(String[] args) {
+      int a = 2;
+      int b = 3;
+      int i = a * b - (a+b);
+      int[] numbers = new int[i];
+      numbers[3] = 5;
+      System.out.println(numbers[3]);
+    }
+}
     </p>
 
     <div class="input-row">
